# race-agents

./: .env.example  .gitignore  CLAUDE.md  JOURNAL.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/01-stateless/: .env.example  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
agents/01-stateless/backend/: agent.py  charts.py  config.py  prompt.md  router.py  silver.py  tools.py
agents/01-stateless/eval/: golden.py
agents/01-stateless/tests/: test_agent_loop.py  test_charts.py  test_silver.py  test_tools.py
agents/02-multistep/: README.md
agents/03-learning/: README.md
agents/04-multi-agent/: README.md
data/bronze/: README.md
deploy/hf-space/: .dockerignore  Dockerfile  README.md  assemble.sh
docs/: build-prompts.md  eval-strategy.md  four-agent-monorepo-plan.md
docs/adr/: 0001-monorepo-and-shared-bronze.md  0002-golden-source-and-build-fresh.md  0002-racebot-is-canonical-stateless-source.md  0003-tool-transport-per-tier.md  0004-data-plane-per-tier.md  0005-charts-as-deterministic-tools.md
docs/architecture/: README.md  Repo_1_The_Stateless_Tool_Caller.md  Repo_2_The_Multistep_Workflow.md  Repo_3_The_Agent_that_Learns.md  Repo_4_The_Multi_Agent_System.md
