[project]
name = "race-agents"
version = "0.0.0"
description = "Four AI agents demonstrating four tiers of the 2026 agent stack on one marathon dataset."
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["packages", "agents"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
